SONARIAC-1477 Replace usages of fest assertions with assertj (#718)
GitOrigin-RevId: a8b51c8c28452995c3694842bac4ca4f624a3759